--- a/index.html
+++ b/index.html
@@ -33,52 +33,7 @@
                     </div>
                     <div class="secMainInside2Grid secMainInside1Grid">
                         <div id="bannedMods" class="secMainInside2GridBox">
-                            <div class="secMainInside2GridBoxInside secMainInside2GridBoxInsideAlt">
-                                <div class="secMainInside2GridBoxInsideBox">
-                                    <div class="sMI2GBIBFeatured"><img class="sMI2GBIBFeaturedImg" src="https://pbs.twimg.com/card_img/1850147978226368513/6qC3hSSe?format=jpg&amp;name=small">
-                                        <div class="sMI2GBIBFeaturedTop">
-                                            <div class="sMI2GBIBFeaturedTopNSFW sMI2GBIBFeaturedTopNSFWShow">
-                                                <p class="sMI2GBIBFeaturedTopNSFWText">NSFW</p>
-                                            </div>
-                                        </div>
-                                        <div class="sMI2GBIBFeaturedBottom"><a class="sMI2GBIBFeaturedBottomCreator" href="#"><span class="sMI2GBIBFeaturedBottomCreatorBanned">Safe</span>
-                                                <div class="sMI2GBIBFeaturedBottomCreatorDivider"></div><span class="sMI2GBIBFeaturedBottomCreatorName">CreatorName</span>
-                                            </a></div>
-                                    </div>
-                                    <div class="sMI2GBIBDetails">
-                                        <div class="sMI2GBIBInfo">
-                                            <h3 class="sMI2GBIBInfoHeading">ModTitleModTitleModTitleModTitleModTitleModTitleModTitleModTitle</h3>
-                                            <p class="sMI2GBIBInfoSub">ShortModDescShortModDescShortModDescShortModDescShortModDescShortModDescShortModDescShortModDescShortModDescShortModDesc</p>
-                                        </div>
-                                        <div class="sMI2GBIBDate">
-                                            <p class="sMI2GBIBDateText">Removed on:&nbsp;<span class="sMI2GBIBDateSpan">Text</span></p>
-                                        </div>
-                                        <div class="sMI2GBIBBans">
-                                            <p class="sMI2GBIBBansText">Taken down from</p>
-                                            <div class="sMI2GBIBBansSites"><a class="sMI2GBIBBansSitesSite" href="#" target="_blank">
-                                                    <p class="sMI2GBIBBansSitesSiteText">ModSiteName<br></p>
-                                                </a><a class="sMI2GBIBBansSitesSite" href="#" target="_blank">
-                                                    <p class="sMI2GBIBBansSitesSiteText">ModSiteName<br></p>
-                                                </a></div>
-                                        </div>
-                                        <div class="sMI2GBIBGame">
-                                            <p class="sMI2GBIBGameText">Game</p>
-                                            <div class="sMI2GBIBGameGame"><a class="sMI2GBIBGameGameLink" href="#" target="_blank">
-                                                    <p class="sMI2GBIBGameGameLinkText">ModSiteName<br></p>
-                                                </a></div>
-                                        </div>
-                                        <div class="sMI2GBIBActions"><button class="btnMain sMI2GBIBActionsButton" type="button">Find</button></div>
-                                        <div class="sMI2GBIBRepub">
-                                            <div class="sMI2GBIBRepubTop"><button class="btnMain sMI2GBIBRepubTopBtn" type="button"><svg xmlns="http://www.w3.org/2000/svg" viewBox="-96 0 512 512" width="1em" height="1em" fill="currentColor">
-                                                        <!--! Font Awesome Free 6.1.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License) Copyright 2022 Fonticons, Inc. -->
-                                                        <path d="M310.6 361.4c12.5 12.5 12.5 32.75 0 45.25C304.4 412.9 296.2 416 288 416s-16.38-3.125-22.62-9.375L160 301.3L54.63 406.6C48.38 412.9 40.19 416 32 416S15.63 412.9 9.375 406.6c-12.5-12.5-12.5-32.75 0-45.25l105.4-105.4L9.375 150.6c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0L160 210.8l105.4-105.4c12.5-12.5 32.75-12.5 45.25 0s12.5 32.75 0 45.25l-105.4 105.4L310.6 361.4z"></path>
-                                                    </svg></button></div>
-                                            <div class="sMI2GBIBRepubMidDivider"></div>
-                                            <div class="sMI2GBIBRepubMid"><a role="button" class="btnMain sMI2GBIBRepubMidBtn" target="_blank"><span class="sMI2GBIBRepubMidBtnSpan">rePubSite</span></a></div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
+                            <div class="secMainInside2GridBoxInside secMainInside2GridBoxInsideAlt"></div>
                             <div class="secMainInside2GridBoxPagination">
                                 <div class="paginationMain">
                                     <div class="paginationMainInside"><button class="btnMain paginationMainInsideBtn paginationMainInsideBtnArrow paginationMainInsideBtnArrowPrev" type="button"><svg xmlns="http://www.w3.org/2000/svg" viewBox="-96 0 512 512" width="1em" height="1em" fill="currentColor">
